# savant-trading

./: .env.example  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  API-KEYS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  ECHO-new.md  ECHO.md  GEMINI-DEEP-RESEARCH-PROMPT.md  HANDOFF.md  IDEAS.md  INCIDENT-2026-06-13.md  LEARNINGS.md  LICENSE  LLM Crypto Trading Growth Strategy.md  MIGRATION.md  MODEL-TRAINING-RESEARCH.md  README.md  SESSION-SUMMARY.md  STARTER-PROMPT.md  VERSION  [with memory] LLM Trading Agent Optimization Recommendations.md  [without memory ]AI Trading Agent Configuration Optimization.md  build.rs  check_toml.ps1  cliff.toml  dashboard.html  protocol.config.yaml  release.toml  run-247.bat  run-247.ps1  run-canary.ps1  run-engine.bat  run-engine.ps1  run-ollama-tests.ps1  savant.blocked  (+6 more)
.kilo/: kilo.json
coding-standards/: PROTOCOL-CHANGELOG.md  csharp.md  go.md  java.md  python.md  rust.md  typescript.md
config/: canary.toml  default.toml  default.toml.bak  test-anvil.toml
dashboard/: package-lock.json  package.json
dev/: AI Crypto Scalping Agent Optimization.md  AUDIT.md  GEMINI-RESEARCH-PAIR-EXPANSION.md  HANDOFF-2026-06-03.md  HANDOFF-2026-06-04.md  HANDOFF-OTHER-DEV.md  HANDOFF.md  KRAKEN-REBASE-PROMPT.md  LEARNINGS.md  MERGE-STRATEGY.md  SNIPE-TRANSCRIPT-PROCESSING.md  arb_top100.csv  blockscout_all.json  blockscout_full.json  blockscout_p1.json  blockscout_tokens.json  cg_arb_market.json  cg_arbitrum_tokens.json  cg_full.json  needs.md  research-prompt-gemini.md  research-prompt-scalping-optimization.md  token_list.txt  tokens_all.txt
docs/: AI DEX Pair Expansion Strategy.md  Crypto Data Sources for Trading Bot.md  Crypto Trading Agent Sandbox Design.md  Crypto Trading Knowledge Expansion Roadmap.md  DEEP-RESEARCH-QUESTIONS.md  GEMINI-DEEP-RESEARCH-PROMPT.md  HANDOFF.md  KNOWLEDGE-EXPANSION-EXECUTION.md  KNOWLEDGE.md  MEMORY-SYSTEM-RESEARCH.md  Optimizing AI Crypto Trading Sandbox.md  REPO-AUDIT-2026-06-15.md  SANDBOX-RESEARCH.md  SAVANT_AGENT_REPORT.md  SOUL-DESIGN-RESEARCH.md  TRAINING-WORKFLOW.md  Trading Agent Memory System Design.md  llms-full.md  openrouter-llms.md  research-sources-review.md  savant-long-run.md
gmx-sidecar/: server.py
knowledge/: brian_jung.json  crypto_fcb.json  extract_books.py  fabio_amt.json  generate_forex_knowledge.py  knowledge_crypto_native.json  knowledge_execution.json  knowledge_fundamentals.json  knowledge_market_regimes.json  knowledge_price_action.json  knowledge_psychology.json  knowledge_risk_management.json  knowledge_sentiment.json  knowledge_technical_analysis.json  knowledge_trading_systems.json  tjr_smc.json  yt_ai_bots.json  yt_ai_crypto_money.json  yt_altcoin_bear_market.json  yt_fabio_scalper.json  yt_hindi_crypto_course_complete.json  yt_hindi_kashif_binance.json  yt_hindi_secret_sessions.json  yt_investing_expert.json  yt_mistry_tool.json  yt_two_scalpers.json  yt_ultimate_crypto_course.json
prompts/: Solo Crypto Trading Workflow Optimization.md  gemini-research-2026-06-17.md  gemini-research-bearish-ema-prompt-fix-2026-06-18.md  github-workflow-optimization-2026-06-17.md  llm-default-to-pass-2026-06-17.md  multi-model-provider-architecture-2026-06-18.md
research/: AI Crypto Trading Repo Deep Dive.md  gemini-deep-research-sandbox-divergence.md  (+5 more)
scripts/: build.sh  (+19 more)
(+648 files in other folders)
