[package]
name = "savant-trading"
version = "0.1.2"
edition = "2021"
description = "Automated crypto trading engine — Kraken exchange"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (Kraken REST API)
reqwest = { version = "0.12", features = ["json"] }

# WebSocket (Kraken WebSocket v2)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serialize"] }

# Configuration
toml = "0.8"

# Database (trade journal)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HMAC for Kraken API authentication
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Environment variables
dotenvy = "0.15"

# Async traits
async-trait = "0.1"

[[bin]]
name = "savant"
path = "src/main.rs"

[lib]
name = "savant_trading"
path = "src/lib.rs"
