[package]
name = "savant-trading"
version = "0.11.3"
edition = "2021"
rust-version = "1.91"
description = "AI-native autonomous crypto trading engine — Multi-chain DEX (Arbitrum, 0x API)"
default-run = "savant"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (Kraken REST API)
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"] }

# WebSocket (Kraken WebSocket v2)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.37"

# Configuration
toml = "0.8"

# Database (trade journal)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# REST API
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# TUI
ratatui = "0.30"
crossterm = "0.28"

# HMAC for Kraken API authentication
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Environment variables
dotenvy = "0.15"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Random number generation (sandbox)
rand = "0.8"

# Async traits
async-trait = "0.1"

# Ethereum/DEX — core types (Address, U256, Bytes, hex) + EIP-712 signing
alloy-core = { version = "1.6", features = ["std", "sol-types"] }
# ECDSA secp256k1 — wallet transaction signing
k256 = { version = "0.13", features = ["ecdsa", "std"] }
# Keccak-256 — Ethereum signing hash (must match k256's digest version: 0.10)
sha3 = "0.10"
# RLP — Ethereum transaction encoding
rlp = "0.5"

# Regex — universal parser for freeform LLM output
regex = "1"

# BPE token counting (FID-085 Item 4)
tiktoken-rs = "0.6"

[dev-dependencies]
wiremock = "0.6"

[build-dependencies]
winres = "0.1"

[[bin]]
name = "savant"
path = "src/main.rs"

[lib]
name = "savant_trading"
path = "src/lib.rs"
